monitoring/controllers/production/kube-prometheus-stack/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-http
  namespace: monitoring
spec:
  entryPoints:
    - websecure
    - web
  routes:
  - match: Host(`grafana-production.dankai.dev`)
    kind: Rule
    services:
      - name: kube-prometheus-stack-grafana
        port: 80
 # tls:
 #   secretName:
